fix stretcher linkes

--- a/src/css/city/about-city.scss
+++ b/src/css/city/about-city.scss
@@ -31,6 +31,9 @@
   gap: 5px;
 
 }
+figure {
+  width: 98% !important;
+}
 .aboutCityPara{
   color: #000;
   text-align: right;
